ingress-mlops-final.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlops-final-ingress
spec:
  rules:
    - host: mlops-final.vbo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-final
                port:
                  number: 8000
